--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<div id="song">
+		<h3>My current favourite sing is M.I.A - Time Traveller </h3>
+		<a href="https://www.youtube.com/watch?v=RoQU0wfZ5Uk">click here to listen</a>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
